# ofdm-modulation

./: .gitignore  CMakeLists.txt  clean_cmake  format_code.sh
examples/: CMakeLists.txt  mac_ofdm_framer.c  mac_ofdm_framer.cpp
gnuplot/: plotframe.gp  plotsamples.gp
include/: bit_utils.h  mac_utils.h  ofdm_utils.h  utils.h
misc/: captured_frame.Rdata  data-2012.bits  data.bits  encoded_3_4-2012.bits  encoded_3_4-first-2012.bits  encoded_3_4.bits  fcs-2012.hex  interleaved-first-2012.bits  interleaved.bits  mac-msdu-2012.hex  mapped-first-2012.complex  message.ascii  msdu-2012.hex  psdu-2012.hex  psdu.hex  scrambled-2012.bits  scrambled.bits  signal-2012.complex
r/: autocorrelation.R
src/: CMakeLists.txt  bit_utils.c  bit_utils.cpp  mac_utils.c  ofdm_preamble.c  ofdm_utils.c  ofdm_utils.cpp  utils.c  utils.cpp
test/: CMakeLists.txt  mac_fcs_tester.c  mac_frame_tester.c  mac_frame_tester.cpp  ofdm_convolutional_encoder_tester.c  ofdm_data_tester.c  ofdm_data_tester.cpp  ofdm_descrambler_tester.cpp  ofdm_interleaver_tester.c  ofdm_interleaver_tester.cpp  ofdm_mapper_tester.c  ofdm_puncturing.c  ofdm_scrambler.c  ofdm_scrambler_tester.c  ofdm_scrambler_tester.cpp  ofdm_tester.c  ofdm_tester.cpp  tester.sh
