cmake_minimum_required (VERSION 2.6)
project (ofdm-modulation)
add_executable(ofdm_preamble ofdm_preamble.c)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/Modules/")
find_package (fftw3 REQUIRED)
if (FFTW_FOUND)
  include_directories(${FFTW_INCLUDE_DIRS})
  set(LIBS ${LIBS} ${FFTW_LIBRARIES})
endif (FFTW_FOUND)

target_link_libraries(ofdm_preamble ${LIBS})
